version 3.0.6
---------------------------

* 2022-03-28 Fixed bug on problems using vector layers having a "scale based" visibility (reported by TheLooka)
* 2022-05-29 Fixed bug on Trimming a circle into an arc (reported by Jopie01)

version 3.0.5
---------------------------

* 2021-08-30 Fixed bug on pedit -> join option


version 3.0.4
---------------------------

* 2020-09-10 Fixed bug when rotating, scaling or mirroring symbol entities (reported by Camilo Corredor)
* 2020-09-10 Now QAD honors QGIS's snap settings (ALL LAYERS, ACTIVE LAYER, ADVANCED) (by Olivier Dalang)


version 3.0.3
---------------------------

* 2020-08-12 Fixed bug when changing drafting tool config (e.g. colors, etc.) (reported by sdnxgr)
* 2020-08-12 Fixed bug on selected object which gets deselected when the mouse moves on any vertex of that object (reported by reancris)
* 2020-06-29 Fixed bug on <DIMLINEAR> and <DIMALIGNED> command (reported by Gabriel De Luca)


version 3.0.2
---------------------------

* 2020-05-15 Fixed bug on <TRIM> command (reported by Gabriel De Luca)


version 3.0.1
---------------------------

* 2020-03-05 Fixed bug on <MBUFFER> command
  
  
version 2.14.5:
---------------------------

* 2018-10-11 Fixed bug on offset command when custom coordinate reference system is used (reported by Dave Burkholder)

* 2018-10-11 Added <ELLIPSE> command

* 2018-10-11 Added right click control in options dialog

* 2018-10-11 Added <SHORTCUTMENU>, <SHORTCUTMENUDURATION> system variables


version 2.14.4:
---------------------------

* 2018-05-11 Added French localization (by dobriseb)

* 2018-05-11 Added Dynamic Input

* 2018-05-11 Added <DYNMODE>, <DYNPROMPT>, <DYNDIVIS>, <DYNDIGRIP>, <DYNPIFORMAT>, <DYNPICOORDS>, <DYNPIVIS>, <DYNTOOLTIPS> system variables

* 2017-03-01 Fixed bug "If you want to draw a circle with a given diameter it draws instead a circle with the radius specified as diameter"  (reported by Mazur93)
