@@ -1,8 +1,11 @@
 version 3.0.6
 ---------------------------
 
+* 2022-06-20 Fixed bug on OFFSET-tool creates wrong calculations with PLINE-vectors (reported by Atol2022)
 * 2022-03-28 Fixed bug on problems using vector layers having a "scale based" visibility (reported by TheLooka)
 * 2022-05-29 Fixed bug on Trimming a circle into an arc (reported by Jopie01)
+* 2022-05-29 Fixed bug on Error when trying to trim a line to a circle (reported by Jopie01)
+* 2022-05-29 Fixed bug on MPOLYGON-tool crashes when trying to use trace-function (reported by Atol2022)
 
 version 3.0.5
 ---------------------------
